FileSystemColorMatch refactoring, tidying up.
Defined IAnsiColorMatch<TTarget> interface, now implemented by
FileSystemColorMatch.

The new interface will allow implementation of additional colur matchers
(e.g. process lists, Select-String matches, etc.)

--- a/AnsiColorOut/AnsiColorOut.csproj
+++ b/AnsiColorOut/AnsiColorOut.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AnsiColorOut.cs" />
     <Compile Include="Cmdlets.cs" />
     <Compile Include="FileSystemColorMatch.cs" />
+    <Compile Include="FileSystemInfoExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
