--- a/AnsiColorOut/packages.config
+++ b/AnsiColorOut/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net452" developmentDependency="true" />
   <package id="XmlDoc2CmdletDoc" version="0.2.7" targetFramework="net452" developmentDependency="true" />
 </packages>
